--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Azure login
         uses: azure/login@v1.4.6
         with:
-          creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
+          creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBS_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
