--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,6 @@
 
 # For production branch
 # Note: This branch represents the stable production environment.
-uat/      @SATS/CT-PR-approver
-prod/      @SATS/CT-PR-approver
-main/      @SATS/CT-PR-approver
+uat/      @janviAjudiya21
+prod/      @janviAjudiya21
+main/      @janviAjudiya21
