--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,4 @@
 
 # For production branch
 # Note: This branch represents the stable production environment.
-uat/      @janviAjudiya21
-prod/      @janviAjudiya21
-main/      @janviAjudiya21
+* @janviAjudiya21
